feat: create coin operations doc
